add: inner merge 매매 data with 전유부

--- a/data_foundation.ipynb
+++ b/data_foundation.ipynb
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>거래금액</th>\n      <th>건축년도</th>\n      <th>년</th>\n      <th>법정동</th>\n      <th>아파트</th>\n      <th>월</th>\n      <th>일</th>\n      <th>전용면적</th>\n      <th>지번</th>\n      <th>지역코드</th>\n      <th>층</th>\n      <th>해제사유발생일</th>\n      <th>해제여부</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>36,400</td>\n      <td>2016</td>\n      <td>2017</td>\n      <td>소담동</td>\n      <td>새샘마을9단지(중흥S클래스 리버뷰)</td>\n      <td>1</td>\n      <td>10</td>\n      <td>84.9779</td>\n      <td>521</td>\n      <td>36110</td>\n      <td>5</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>39,282</td>\n      <td>2016</td>\n      <td>2017</td>\n      <td>소담동</td>\n      <td>새샘마을9단지(중흥S클래스 리버뷰)</td>\n      <td>1</td>\n      <td>20</td>\n      <td>84.9779</td>\n      <td>521</td>\n      <td>36110</td>\n      <td>24</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>49,000</td>\n      <td>2016</td>\n      <td>2017</td>\n      <td>소담동</td>\n      <td>새샘마을3단지(모아미래도리버시티)</td>\n      <td>1</td>\n      <td>21</td>\n      <td>97.9940</td>\n      <td>BL-M3</td>\n      <td>36110</td>\n      <td>13</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 163
+     "execution_count": 210
     }
    ],
    "source": [
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>거래금액</th>\n      <th>건축년도</th>\n      <th>년</th>\n      <th>법정동</th>\n      <th>아파트</th>\n      <th>월</th>\n      <th>일</th>\n      <th>전용면적</th>\n      <th>지번</th>\n      <th>지역코드</th>\n      <th>층</th>\n      <th>해제사유발생일</th>\n      <th>해제여부</th>\n      <th>번</th>\n      <th>지</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2</th>\n      <td>49,000</td>\n      <td>2016</td>\n      <td>2017</td>\n      <td>소담동</td>\n      <td>새샘마을3단지(모아미래도리버시티)</td>\n      <td>1</td>\n      <td>21</td>\n      <td>97.9940</td>\n      <td>BL-M3</td>\n      <td>36110</td>\n      <td>13</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>BL</td>\n      <td>M3</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>40,800</td>\n      <td>2016</td>\n      <td>2017</td>\n      <td>소담동</td>\n      <td>새샘마을3단지(모아미래도리버시티)</td>\n      <td>1</td>\n      <td>25</td>\n      <td>97.9940</td>\n      <td>BL-M3</td>\n      <td>36110</td>\n      <td>7</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>BL</td>\n      <td>M3</td>\n    </tr>\n    <tr>\n      <th>241</th>\n      <td>37,000</td>\n      <td>2016</td>\n      <td>2017</td>\n      <td>소담동</td>\n      <td>새샘마을3단지(모아미래도리버시티)</td>\n      <td>2</td>\n      <td>6</td>\n      <td>84.9989</td>\n      <td>BL-M3</td>\n      <td>36110</td>\n      <td>18</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>BL</td>\n      <td>M3</td>\n    </tr>\n    <tr>\n      <th>244</th>\n      <td>46,400</td>\n      <td>2016</td>\n      <td>2017</td>\n      <td>소담동</td>\n      <td>새샘마을3단지(모아미래도리버시티)</td>\n      <td>2</td>\n      <td>28</td>\n      <td>97.9940</td>\n      <td>BL-M3</td>\n      <td>36110</td>\n      <td>8</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>BL</td>\n      <td>M3</td>\n    </tr>\n    <tr>\n      <th>568</th>\n      <td>38,600</td>\n      <td>2016</td>\n      <td>2017</td>\n      <td>소담동</td>\n      <td>새샘마을3단지(모아미래도리버시티)</td>\n      <td>3</td>\n      <td>12</td>\n      <td>84.9989</td>\n      <td>BL-M3</td>\n      <td>36110</td>\n      <td>19</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>BL</td>\n      <td>M3</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 169
+     "execution_count": 219
     }
    ],
    "source": [
@@ -593,27 +593,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "<ipython-input-220-43c4834a0794>:2: SettingWithCopyWarning: \nA value is trying to be set on a copy of a slice from a DataFrame.\nTry using .loc[row_indexer,col_indexer] = value instead\n\nSee the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 괄호() 제거\n",
+    "bj_alpha['아파트'] = bj_alpha['아파트'].str.findall('.+(?=\\()').str.join(\"\")\n",
+    "\n",
+    "bj_alpha = bj_alpha.drop(columns=['번','지'])\n",
+    "bj_alpha = bj_alpha.rename(columns={'아파트': '건물명'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "Int64Index([    2,     3,   241,   244,   568,   569,   570,   571,   897,\n",
-       "              898,\n",
-       "            ...\n",
-       "            21293, 21371, 21880, 21885, 22039, 22485, 23632, 23639, 24074,\n",
-       "            24082],\n",
-       "           dtype='int64', length=331)"
-      ]
+       "           거래금액  건축년도     년  법정동      건물명   월   일     전용면적     지번   지역코드   층  \\\n",
+       "0        49,000  2016  2017  소담동  새샘마을3단지   1  21  97.9940  BL-M3  36110  13   \n",
+       "1        49,000  2016  2017  소담동  새샘마을3단지   1  21  97.9940  BL-M3  36110  13   \n",
+       "2        49,000  2016  2017  소담동  새샘마을3단지   1  21  97.9940  BL-M3  36110  13   \n",
+       "3        49,000  2016  2017  소담동  새샘마을3단지   1  21  97.9940  BL-M3  36110  13   \n",
+       "4        49,000  2016  2017  소담동  새샘마을3단지   1  21  97.9940  BL-M3  36110  13   \n",
+       "...         ...   ...   ...  ...      ...  ..  ..      ...    ...    ...  ..   \n",
+       "3357538  89,000  2018  2020  다정동  가온마을5단지  11  16  84.9837     가-  36110   3   \n",
+       "3357539  89,000  2018  2020  다정동  가온마을5단지  11  16  84.9837     가-  36110   3   \n",
+       "3357540  89,000  2018  2020  다정동  가온마을5단지  11  16  84.9837     가-  36110   3   \n",
+       "3357541  89,000  2018  2020  다정동  가온마을5단지  11  16  84.9837     가-  36110   3   \n",
+       "3357542  89,000  2018  2020  다정동  가온마을5단지  11  16  84.9837     가-  36110   3   \n",
+       "\n",
+       "        해제사유발생일 해제여부     번     지  \n",
+       "0           NaN  NaN  0550  0000  \n",
+       "1           NaN  NaN  0550  0000  \n",
+       "2           NaN  NaN  0550  0000  \n",
+       "3           NaN  NaN  0550  0000  \n",
+       "4           NaN  NaN  0550  0000  \n",
+       "...         ...  ...   ...   ...  \n",
+       "3357538     NaN  NaN  0946  0000  \n",
+       "3357539     NaN  NaN  0946  0000  \n",
+       "3357540     NaN  NaN  0946  0000  \n",
+       "3357541     NaN  NaN  0946  0000  \n",
+       "3357542     NaN  NaN  0946  0000  \n",
+       "\n",
+       "[3357543 rows x 15 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>거래금액</th>\n      <th>건축년도</th>\n      <th>년</th>\n      <th>법정동</th>\n      <th>건물명</th>\n      <th>월</th>\n      <th>일</th>\n      <th>전용면적</th>\n      <th>지번</th>\n      <th>지역코드</th>\n      <th>층</th>\n      <th>해제사유발생일</th>\n      <th>해제여부</th>\n      <th>번</th>\n      <th>지</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>49,000</td>\n      <td>2016</td>\n      <td>2017</td>\n      <td>소담동</td>\n      <td>새샘마을3단지</td>\n      <td>1</td>\n      <td>21</td>\n      <td>97.9940</td>\n      <td>BL-M3</td>\n      <td>36110</td>\n      <td>13</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0550</td>\n      <td>0000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>49,000</td>\n      <td>2016</td>\n      <td>2017</td>\n      <td>소담동</td>\n      <td>새샘마을3단지</td>\n      <td>1</td>\n      <td>21</td>\n      <td>97.9940</td>\n      <td>BL-M3</td>\n      <td>36110</td>\n      <td>13</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0550</td>\n      <td>0000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>49,000</td>\n      <td>2016</td>\n      <td>2017</td>\n      <td>소담동</td>\n      <td>새샘마을3단지</td>\n      <td>1</td>\n      <td>21</td>\n      <td>97.9940</td>\n      <td>BL-M3</td>\n      <td>36110</td>\n      <td>13</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0550</td>\n      <td>0000</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>49,000</td>\n      <td>2016</td>\n      <td>2017</td>\n      <td>소담동</td>\n      <td>새샘마을3단지</td>\n      <td>1</td>\n      <td>21</td>\n      <td>97.9940</td>\n      <td>BL-M3</td>\n      <td>36110</td>\n      <td>13</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0550</td>\n      <td>0000</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>49,000</td>\n      <td>2016</td>\n      <td>2017</td>\n      <td>소담동</td>\n      <td>새샘마을3단지</td>\n      <td>1</td>\n      <td>21</td>\n      <td>97.9940</td>\n      <td>BL-M3</td>\n      <td>36110</td>\n      <td>13</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0550</td>\n      <td>0000</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>3357538</th>\n      <td>89,000</td>\n      <td>2018</td>\n      <td>2020</td>\n      <td>다정동</td>\n      <td>가온마을5단지</td>\n      <td>11</td>\n      <td>16</td>\n      <td>84.9837</td>\n      <td>가-</td>\n      <td>36110</td>\n      <td>3</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0946</td>\n      <td>0000</td>\n    </tr>\n    <tr>\n      <th>3357539</th>\n      <td>89,000</td>\n      <td>2018</td>\n      <td>2020</td>\n      <td>다정동</td>\n      <td>가온마을5단지</td>\n      <td>11</td>\n      <td>16</td>\n      <td>84.9837</td>\n      <td>가-</td>\n      <td>36110</td>\n      <td>3</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0946</td>\n      <td>0000</td>\n    </tr>\n    <tr>\n      <th>3357540</th>\n      <td>89,000</td>\n      <td>2018</td>\n      <td>2020</td>\n      <td>다정동</td>\n      <td>가온마을5단지</td>\n      <td>11</td>\n      <td>16</td>\n      <td>84.9837</td>\n      <td>가-</td>\n      <td>36110</td>\n      <td>3</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0946</td>\n      <td>0000</td>\n    </tr>\n    <tr>\n      <th>3357541</th>\n      <td>89,000</td>\n      <td>2018</td>\n      <td>2020</td>\n      <td>다정동</td>\n      <td>가온마을5단지</td>\n      <td>11</td>\n      <td>16</td>\n      <td>84.9837</td>\n      <td>가-</td>\n      <td>36110</td>\n      <td>3</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0946</td>\n      <td>0000</td>\n    </tr>\n    <tr>\n      <th>3357542</th>\n      <td>89,000</td>\n      <td>2018</td>\n      <td>2020</td>\n      <td>다정동</td>\n      <td>가온마을5단지</td>\n      <td>11</td>\n      <td>16</td>\n      <td>84.9837</td>\n      <td>가-</td>\n      <td>36110</td>\n      <td>3</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0946</td>\n      <td>0000</td>\n    </tr>\n  </tbody>\n</table>\n<p>3357543 rows × 15 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 175
+     "execution_count": 228
     }
    ],
    "source": [
-    "bj_alpha.index"
+    "pd.merge(bj_alpha, b_unit[['건물명', '번','지']], how='inner', on='건물명' )"
    ]
   },
   {
