--- a/전유부_아파트_정리.ipynb
+++ b/전유부_아파트_정리.ipynb
@@ -356,14 +356,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "True"
+      "text/plain": "nan"
      },
-     "execution_count": 90,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,63 +376,107 @@
     "PNU = PNU.transpose()\r\n",
     "\r\n",
     "PNU = PNU.to_dict()\r\n",
-    "s = apt_trd[apt_trd['아파트'] == '해밀마을2단지']['PNU'].iloc[0]\r\n",
-    "len(apt_trd[apt_trd['아파트'].str.contains('다원파크리안아파트')]) == 0"
+    "apt_group['건물명'].iloc[523]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array(['고운동', '금남면', '나성동', '다정동', '대평동', '도담동', '반곡동', '보람동', '부강면',\n       '새롬동', '소담동', '소정면', '아름동', '어진동', '연동면', '연서면', '장군면', '전의면',\n       '조치원읍', '종촌동', '한솔동', '해밀동'], dtype=object)"
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "apt_group['동'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "522\n"
+      "523\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "first argument must be string or compiled pattern",
+     "ename": "AttributeError",
+     "evalue": "'float' object has no attribute 'replace'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-86-ca52a55b4b60>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[1;31m#(2). 건물명 정보 기준으로 PNU 정보 바꾸기(group의 번지가 누락된 케이스)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m     \u001b[1;32melif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mapt_trd\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mapt_trd\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'아파트'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontains\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbid_error\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m0\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m         \u001b[0mbid\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mapt_trd\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mapt_trd\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'아파트'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontains\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbid_error\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Anaconda\\lib\\site-packages\\pandas\\core\\strings.py\u001b[0m in \u001b[0;36mwrapper\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1999\u001b[0m                 )\n\u001b[0;32m   2000\u001b[0m                 \u001b[1;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2001\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2002\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2003\u001b[0m         \u001b[0mwrapper\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfunc_name\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Anaconda\\lib\\site-packages\\pandas\\core\\strings.py\u001b[0m in \u001b[0;36mcontains\u001b[1;34m(self, pat, case, flags, na, regex)\u001b[0m\n\u001b[0;32m   2822\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0mforbid_nonstring_types\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"bytes\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2823\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mcontains\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpat\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcase\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mna\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnan\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mregex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2824\u001b[1;33m         result = str_contains(\n\u001b[0m\u001b[0;32m   2825\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_parent\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpat\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcase\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcase\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mflags\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mna\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mna\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mregex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mregex\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2826\u001b[0m         )\n",
-      "\u001b[1;32mC:\\Anaconda\\lib\\site-packages\\pandas\\core\\strings.py\u001b[0m in \u001b[0;36mstr_contains\u001b[1;34m(arr, pat, case, flags, na, regex)\u001b[0m\n\u001b[0;32m    437\u001b[0m             \u001b[0mflags\u001b[0m \u001b[1;33m|=\u001b[0m \u001b[0mre\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mIGNORECASE\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    438\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 439\u001b[1;33m         \u001b[0mregex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mre\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpat\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mflags\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    440\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    441\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mregex\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgroups\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Anaconda\\lib\\re.py\u001b[0m in \u001b[0;36mcompile\u001b[1;34m(pattern, flags)\u001b[0m\n\u001b[0;32m    250\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcompile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    251\u001b[0m     \u001b[1;34m\"Compile a regular expression pattern, returning a Pattern object.\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 252\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0m_compile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    253\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    254\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mpurge\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Anaconda\\lib\\re.py\u001b[0m in \u001b[0;36m_compile\u001b[1;34m(pattern, flags)\u001b[0m\n\u001b[0;32m    301\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mpattern\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    302\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0msre_compile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misstring\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 303\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"first argument must be string or compiled pattern\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    304\u001b[0m     \u001b[0mp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msre_compile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    305\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mflags\u001b[0m \u001b[1;33m&\u001b[0m \u001b[0mDEBUG\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: first argument must be string or compiled pattern"
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-135-629325cee2a7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[0mdong\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mapt_group\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'동'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m     \u001b[0mbid_new\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbid_error\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdong\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m''\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m     \u001b[0mbid_new\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbid_new\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'아파트'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m''\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'float' object has no attribute 'replace'"
      ]
     }
    ],
    "source": [
     "# 건물명, PNU 정보 통일\r\n",
-    "invaild = []\r\n",
-    "for i in apt_group.index[522:] :\r\n",
+    "invaild = pd.DataFrame(columns=apt_group.columns)\r\n",
+    "for i in apt_group.index[523:] :\r\n",
     "    \r\n",
     "    pnu_value = apt_group['PNU'].iloc[i]\r\n",
     "    bid_error = apt_group['건물명'].iloc[i]\r\n",
+    "    # nan 일때, 처리 할 방법 필요\r\n",
+    "    bid_df = apt_trd[apt_trd['아파트'] == bid_error]\r\n",
+    "    print(i)\r\n",
+    "    dong = apt_group['동'].iloc[i][:-1]\r\n",
+    "    \r\n",
+    "    bid_new = bid_error.replace(dong,'')\r\n",
+    "    bid_new = bid_new.replace('아파트','')\r\n",
+    "\r\n",
     "    #건물명, 지번 거래정보 기준으로 교체(단, 거래가 발생한 케이스만)\r\n",
     "    #(1). PNU 정보 기준으로 건물명 바꾸기(group의 번지가 있는 케이스)\r\n",
     "    if pnu_value in PNU :\r\n",
     "        apt_group['건물명'].iloc[i] = PNU.get(pnu_value)['아파트']\r\n",
     "    \r\n",
     "    #(2). 건물명 정보 기준으로 PNU 정보 바꾸기(group의 번지가 누락된 케이스)\r\n",
-    "    elif len(apt_trd[apt_trd['아파트'].str.contains(bid_error)]) != 0 :\r\n",
+    "    # >> 정규식으로 바꾸기\r\n",
+    "    elif len(bid_df) != 0 :\r\n",
     "        \r\n",
     "        bid = apt_trd[apt_trd['아파트'].str.contains(bid_error)].iloc[0]\r\n",
     "        apt_group['PNU'].iloc[i] = bid['PNU']\r\n",
     "        apt_group['지번'].iloc[i] =bid['번'] + bid['지']\r\n",
-    "    \r\n",
-    "    else :\r\n",
-    "        print(i)\r\n",
-    "        invaild.append(apt_group['건물명'].iloc[i])\r\n",
+    "    #(3) 건물명에 동이름이 포함된 경우, trd 기준으로 정보 변경\r\n",
+    "    elif len(apt_trd[apt_trd['아파트'].str.contains(bid_new)]) != 0:\r\n",
     "\r\n",
-    "apt_group.tail()"
+    "        bid = apt_trd[apt_trd['아파트'].str.contains(bid_new)].iloc[0]\r\n",
+    "        apt_group['PNU'].iloc[i] = bid['PNU']\r\n",
+    "        apt_group['지번'].iloc[i] = bid['번'] + bid['지']\r\n",
+    "\r\n",
+    "    else :\r\n",
+    "        #print(i, apt_group['건물명'].iloc[i], apt_group['PNU'].iloc[i])\r\n",
+    "        invaild.loc[i] = apt_group.iloc[i]\r\n",
+    "display(apt_group.tail(), invaild.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array(['금남두진리버빌아파트', '나릿재마을1단지', '가온마을7단지', '가온마을9단지', '해들마을5단지',\n       '도램마을8단지', '행복아파트2차', '도램마을6단지', '수루배마을5단지', '호려울마을9단지',\n       '호려울마을2단지', '삼호아파트', '부강주연아파트', 'TrueLight-A', '팔팔아파트', '대신하나로아파트',\n       '한화종합화학사원아파트', '미래로아파트', '청솔아파트', '대광아파트', '새뜸마을7단지', '새뜸마을8단지',\n       '새샘마을2단지', '102동', '104동', '무궁화아파트', '범지기마을5단지', '범지기마을6단지',\n       '한뜰마을1단지', '세종청정아파트', '충룡아파트', '대원네스트빌아파트', '영조정보마을임대아파트',\n       '금암그린임대아파트', '재동아파트', '성호늘푸른아파트', '107동', '108동', '계룡아파트',\n       '조치원목화아파트', '현대APT', '세종2차굿애플', '청송아파트', '다원파크리안아파트', nan,\n       '번암리리치빌3차임대아파트', '번암리리치빌2차임대아파트', '번암리리치빌1차임대아파트', '주공아파트',\n       '세종1차굿애플허브', '두진한라아파트', '서창리예원드림빌도시형생활주택', '세종서창행복주택', '조형아파트',\n       '도화아파트', '일신유니-빌아파트', 'e-편한세상세종', '신흥사랑주택', '군인아파트', '신흥푸르지오',\n       '조치원신흥e-편한세상아파트', '대도APT', '정리풍산아파트', '신동아아파트', '조치원삼일아파트',\n       '자이아파트', '죽림우방유쉘', '가재마을1단지'], dtype=object)"
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "invaild['건물명'].unique()"
    ]
   },
   {
